--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "assignment1",
   "version": "1.0.0",
   "description": "This is Assignment 1 by Manjeet Kumar",
-  "main": "app.js",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/manjeetkmr18/assignment1.git"
+  },
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Manjeet Kumar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
