--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Manjeet Kumar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.6.5"
